// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DropDownMenu Component > should match snapshot (open menu) 1`] = `
<DocumentFragment>
  <button
    aria-label="menu"
    class="outline-none"
    data-focus-visible="true"
    data-focused="true"
    data-rac=""
    type="button"
  >
    <div>
      ☰
    </div>
  </button>
</DocumentFragment>
`;

exports[`DropDownMenu Component > should match snapshot 1`] = `
<DocumentFragment>
  <button
    aria-label="menu"
    class="outline-none"
    data-rac=""
    type="button"
  >
    <div>
      ☰
    </div>
  </button>
</DocumentFragment>
`;
